--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<button id="button-1" class="btn btn-primary">Button-1</button>
 	<button id="button-2" class="btn btn-secondary">Button-2</button>
 	<button id="button-3" class="btn btn-success">Button-3</button>
-	<button id="button-4" class="btn btn-danger ">Button-4</button>
+	<button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
 	<div>
 	<button id="button-5"  class="btn btn-warning  w-100 col:my5">Button-5</button>
 	</div>
@@ -21,6 +21,8 @@
 	<button id="button-8" class="btn btn-link">Button-8</button>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
