--- a/main.html
+++ b/main.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-	<button id="button-1" class="btn btn-primary button">Button-1</button>
-	<button id="button-2" class="btn btn-Outline-secondary button">Button-2</button>
-	<button id="button-3" class="btn btn-Success large button">Button-3</button>
-	<button id="button-4" class="btn btn-Danger small button">Button-4</button>
+	<button id="button-1" class="btn btn-primary">Button-1</button>
+	<button id="button-2" class="btn btn-outline-secondary">Button-2</button>
+	<button id="button-3" class="btn btn-success btn-lg">Button-3</button>
+	<button id="button-4" class="btn btn-danger btn-sm">Button-4</button>
 	<div>
-	<button id="button-5"  class="btn btn-Warning large full-screen width button  w-100 col:my5">Button-5</button>
+	<button id="button-5"  class="btn btn-warning  w-100 col:my5">Button-5</button>
 	</div>
-	<button id="button-6" class="btn btn-info Disabled info button" disabled>Button-6</button>
-	<button id="button-7" class="btn btn-light button">Button-7</button>
-	<button id="button-8" class="btn btn-link button">Button-8</button>
+	<button id="button-6" class="btn btn-info" disabled>Button-6</button>
+	<button id="button-7" class="btn btn-light">Button-7</button>
+	<button id="button-8" class="btn btn-link">Button-8</button>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
